test/error/function_nested.gw
function void test()
{
  function void nested(){}
}
